Update title to Woozy Social and use logo as favicon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/your-logo.jpg" />
+    <link rel="icon" type="image/png" href="/assets/woozysocial.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ayrshare Social API Demo</title>
+    <title>Woozy Social</title>
   </head>
   <body>
     <div id="root"></div>
