Revert "Add new favicon and app icon"
This reverts commit 372ec5621cb00a77baea3a97167170bef8a74d76.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-    <link rel="apple-touch-icon" href="/assets/android-chrome-512x512.png" />
+    <link rel="icon" type="image/png" href="/assets/woozysocial.png" />
+    <link rel="apple-touch-icon" href="/assets/woozysocial.png" />
 
     <!-- Base SEO Meta Tags -->
     <title>Woozy Social - AI-Powered Social Media Management</title>
